# lab3

./: CMakeLists.txt  Temperature.cc  Temperature.h  main.cpp  test_input.cc
